Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       <h1>
 <a id="the-shinning-a-zork-like-game" class="anchor" href="#the-shinning-a-zork-like-game" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The Shinning: A Zork-Like Game</h1>
 
+<p>This is the web page for The Shinning.</p>
+
 <p>The game makes you search for objects, enter dungeons, act with people and (sometimes) fight with enemies, all in a 3rd person narration. The goal is to know what produced the shinning and if it is a menace to humanity, defeat it. Your actions have consequences in this game, you do not have to kill if it is not required.</p>
 
       <footer class="site-footer">
