--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
 <p>The game makes you search for objects, enter dungeons, act with people and (sometimes) fight with enemies, all in a 3rd person narration. The goal is to know what produced the shinning and if it is a menace to humanity, defeat it. Your actions have consequences in this game, you do not have to kill if it is not required.</p>
 
+<p>Link to the map: <a href="https://github.com/SimonStoyanov/The_Shinning.Zork-Like_Game/wiki/2.-The-World">https://github.com/SimonStoyanov/The_Shinning.Zork-Like_Game/wiki/2.-The-World</a></p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/SimonStoyanov/The_Shinning.Zork-Like_Game">The shinning. A Zork-Like Game</a> is maintained by <a href="https://github.com/SimonStoyanov">SimonStoyanov</a>.</span>
 
